Добавляет планшетную версию каталога и категории

--- a/src/pages/catalog.html
+++ b/src/pages/catalog.html
@@ -119,17 +119,17 @@
                     </button>
                     <a href="index.html" class="second-row__main-link">
                         <picture>
-                            <source src="./assets/img/main-logo.svg" alt="Логотип бьюти мед групп." class="main-link__logo"
-                            width="261" height="42" media="(min-width: 760px)">
+                            <source src="./assets/img/main-logo.svg" alt="Логотип бьюти мед групп."
+                                class="main-link__logo" width="261" height="42" media="(min-width: 760px)">
                             <img src="./assets/img/main-logo.svg" alt="Логотип бьюти мед групп." class="main-link__logo"
-                            width="149" height="24">
-                           </picture>
+                                width="149" height="24">
+                        </picture>
                     </a>
                     <div class="second-row__address">
                         Москва, ул. Прянишникова, д. 23А
                         пом. XLVIII, к. 5–8
                     </div>
-                                        <div class="second-row__search-wrapper">
+                    <div class="second-row__search-wrapper">
                         <input type="text" id="search" class="second-row__search" placeholder="Крем для лица">
                         <div class="modal-search">
                             <span class="modal-search__title">
@@ -272,6 +272,29 @@
                             <a href="basket.html" class="user-navigation__link user-navigation__link--cart">
                                 <span class="visually-hidden">Корзина.</span>
                             </a>
+                        </li>
+                    </ul>
+                    <ul class="third-row__products-navigation third-row__products-navigation--tablet">
+                        <li class="products-navigation__item">
+                            <a href="company.html" class="products-navigation__link">О компании</a>
+                        </li>
+                        <li class="products-navigation__item">
+                            <a href="blog.html" class="products-navigation__link">Блог</a>
+                        </li>
+                        <li class="products-navigation__item">
+                            <a href="delivery.html" class="products-navigation__link">Доставка</a>
+                        </li>
+                        <li class="products-navigation__item">
+                            <a href="payment.html" class="products-navigation__link">Оплата</a>
+                        </li>
+                        <li class="products-navigation__item">
+                            <a href="contacts.html" class="products-navigation__link">Контакты</a>
+                        </li>
+                        <li class="products-navigation__item">
+                            <a href="training.html" class="products-navigation__link">Обучение</a>
+                        </li>
+                        <li class="products-navigation__item">
+                            <a href="reviews.html" class="products-navigation__link">Отзывы</a>
                         </li>
                     </ul>
                 </div>
@@ -863,7 +886,8 @@
                                 <span class="visually-hidden">Телеграм.</span>
                             </a>
                         </div>
-                        <button type="button" class="footer__application footer__application--mob">Оставить заявку</button>
+                        <button type="button" class="footer__application footer__application--mob">Оставить
+                            заявку</button>
                     </div>
                 </div>
                 <div class="footer__row footer__row--third">
