Добавляет планшетку продукта, корзины, оформления заказа

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1061,7 +1061,7 @@
             </section>
 
             <!-- отзывы -->
-            <section class="main-reviews">
+            <section class="main-reviews main-reviews--main">
                 <h2 class="section__title--smaller section__title main-reviews__title">Отзывы клиентов и мастеров</h2>
                 <ul class="main-reviews__list">
                     <li class="main-reviews__item">
