--- a/src/pages/making-order.html
+++ b/src/pages/making-order.html
@@ -389,33 +389,35 @@
                             <textarea name="making-order-comment" id="making-order-comment"
                                 value="Расскажите о пожеланиях к заказу или как улучшить работу сайта" placeholder="Расскажите о пожеланиях к заказу или как улучшить работу сайта"></textarea>
                         </fieldset>
-                        <div class="making-order__price-wrapper">
-                            <div class="making-order__price">
-                                <span class="making-order__price-text">Сумма товаров</span>
-                                <div class="making-order__price-digits">
-                                    <span class="making-order__price-old">1660 ₽</span>
+                        <div class="making-order__tablet">
+                            <div class="making-order__price-wrapper">
+                                <div class="making-order__price">
+                                    <span class="making-order__price-text">Сумма товаров</span>
+                                    <div class="making-order__price-digits">
+                                        <span class="making-order__price-old">1660 ₽</span>
+                                        <span class="making-order__price-new">1660 ₽</span>
+                                    </div>
+                                </div>
+                                <div class="making-order__price">
+                                    <span class="making-order__price-text">Доставка</span>
+                                    <span class="making-order__price-new">+660 ₽</span>
+                                </div>
+                                <div class="making-order__price">
+                                    <span class="making-order__price-text">Итоговая скидка</span>
+                                    <span class="making-order__price-new">-66 ₽</span>
+                                </div>
+                                <div class="making-order__price making-order__price--final">
+                                    <span class="making-order__price-text">Итого</span>
                                     <span class="making-order__price-new">1660 ₽</span>
                                 </div>
                             </div>
-                            <div class="making-order__price">
-                                <span class="making-order__price-text">Доставка</span>
-                                <span class="making-order__price-new">+660 ₽</span>
-                            </div>
-                            <div class="making-order__price">
-                                <span class="making-order__price-text">Итоговая скидка</span>
-                                <span class="making-order__price-new">-66 ₽</span>
-                            </div>
-                            <div class="making-order__price making-order__price--final">
-                                <span class="making-order__price-text">Итого</span>
-                                <span class="making-order__price-new">1660 ₽</span>
-                            </div>
+                            <button type="submit" class="making-order__btn basket__buy">Оформить заказ</button>
+                            <span class="making-order__btn-descr">
+                                Я согласен с условиями предоставления услуг
+                                и&nbsp;обработкой моих персональных данных
+                                при&nbsp;нажатии "Оформить заказ"
+                            </span>
                         </div>
-                        <button type="submit" class="making-order__btn basket__buy">Оформить заказ</button>
-                        <span class="making-order__btn-descr">
-                            Я согласен с условиями предоставления услуг
-                            и&nbsp;обработкой моих персональных данных
-                            при&nbsp;нажатии "Оформить заказ"
-                        </span>
                     </form>
                     <ul class="basket__list basket__list--order">
                         <li class="basket__item">
