--- a/src/pages/product.html
+++ b/src/pages/product.html
@@ -294,6 +294,23 @@
                 </ul>
             </div>
 
+            <div class="products__tablet">
+                <div class="products__tablet-wrapper">
+                    <h1 class="products__name">БИО крем для рук освежающий с лимонной мятой Alpine Organics 50
+                        мл</h1>
+                    <div class="products__tablet-text">
+                        <span class="products__code">
+                            Код товара: <span>25122383</span>
+                        </span>
+                        <div class="main-categories__card__rating">
+                            <span class="visually-hidden">4 звезды.</span>
+                        </div>
+                        <div class="products__rating-count">Отзывов:&ensp;<span>46</span></div>
+                    </div>
+                </div>
+                <img src="./assets/img/bioderma.webp" alt="Логотип бренда." class="products__img" width="80"
+                    height="80">
+            </div>
             <!-- карточка товара с информацией -->
             <section class="products">
                 <div class="products__photos">
@@ -499,13 +516,17 @@
                         <div class="products-full-info__imgs">
                             <picture>
                                 <source srcset="./assets/img/product/product.webp" alt="Фото товара."
-                                    class="products-full-info-img" width="448" height="299" media="(min-width: 744px)">
+                                    class="products-full-info-img" width="448" height="299" media="(min-width: 1900px)">
+                                <source srcset="./assets/img/product/product-tablet.webp" alt="Фото товара."
+                                    class="products-full-info-img" width="336" height="224" media="(min-width: 744px)">
                                 <img src="./assets/img/product/product-mob.webp" alt="Товар."
                                     class="products-full-info-img products-full-info-img--mob" width="344" height="230">
                             </picture>
                             <picture>
                                 <source srcset="./assets/img/product/product.webp" alt="Фото товара."
-                                    class="products-full-info-img" width="448" height="299" media="(min-width: 744px)">
+                                    class="products-full-info-img" width="448" height="299" media="(min-width: 1900px)">
+                                <source srcset="./assets/img/product/product-tablet.webp" alt="Фото товара."
+                                    class="products-full-info-img" width="336" height="224" media="(min-width: 744px)">
                                 <img src="./assets/img/product/product-mob.webp" alt="Товар."
                                     class="products-full-info-img" width="344" height="230">
                             </picture>
