Добавляет планшетку всего, кроме личного кабинета

--- a/src/pages/article.html
+++ b/src/pages/article.html
@@ -367,6 +367,15 @@
                                         <span>Основатель компании</span>
                                     </div>
                                 </div>
+                                <div class="slider__btns slider__btns--company">
+                                    <button class="slider__btn slider__btn--prev slider__btn--unactive">
+                                        <span class="visually-hidden">Предыдущий слайд</span>
+                                    </button>
+                                    <a href="reviews.html" class="main-reviews__show-all">Все статьи</a>
+                                    <button class="slider__btn slider__btn--next">
+                                        <span class="visually-hidden">Следующий слайд</span>
+                                    </button>
+                                </div>
                             </div>
                         </div>
                     </div>
