--- a/src/pages/faq.html
+++ b/src/pages/faq.html
@@ -119,17 +119,17 @@
                     </button>
                     <a href="index.html" class="second-row__main-link">
                         <picture>
-                            <source src="./assets/img/main-logo.svg" alt="Логотип бьюти мед групп." class="main-link__logo"
-                            width="261" height="42" media="(min-width: 760px)">
+                            <source src="./assets/img/main-logo.svg" alt="Логотип бьюти мед групп."
+                                class="main-link__logo" width="261" height="42" media="(min-width: 760px)">
                             <img src="./assets/img/main-logo.svg" alt="Логотип бьюти мед групп." class="main-link__logo"
-                            width="149" height="24">
-                           </picture>
+                                width="149" height="24">
+                        </picture>
                     </a>
                     <div class="second-row__address">
                         Москва, ул. Прянишникова, д. 23А
                         пом. XLVIII, к. 5–8
                     </div>
-                                        <div class="second-row__search-wrapper">
+                    <div class="second-row__search-wrapper">
                         <input type="text" id="search" class="second-row__search" placeholder="Крем для лица">
                         <div class="modal-search">
                             <span class="modal-search__title">
@@ -313,6 +313,29 @@
                                 curabitur
                                 gravida. Cras pulvinar mattis nunc sed blandit libero volutpat sed cras.
                             </span>
+                        </div>
+                        <div class="faq__assistant faq__assistant--tablet">
+                            <div class="faq__assistant--tablet-left-col">
+                                <span class="faq-assistant__title">Кто отвечает</span>
+                                <div class="faq-assistant__decorative webinar-useful__block webinar-main__decorative">
+                                    <span class="faq-assistant__name">
+                                        Фамилия Имя&nbsp;Отчество
+                                    </span>
+                                    <span class="faq-assistant__func">
+                                        Ведущий специалист по подбору ассортимента на сайте
+                                    </span>
+                                    <img src="./assets/img/webinar/webinar.webp" alt="Декоративное изображение."
+                                        aria-hidden="true" width="141" height="200">
+                                </div>
+                            </div>
+                            <div class="faq__assistant--tablet-right-col">
+                                <span class="faq-assistant__descr">
+                                    ПрофБьютиМаркет собрал топовую команду экспертов, которая с радостью откликнется на
+                                    любой
+                                    вопрос. Их знания, огромный опыт и искреннее желание помочь в Вашем распоряжении.
+                                </span>
+                                <button class="faq-assistant__btn basket__buy">Задать вопрос</button>
+                            </div>
                         </div>
                         <ul class="faq__list">
                             <li class="faq__item">
@@ -1004,7 +1027,8 @@
                                 <span class="visually-hidden">Телеграм.</span>
                             </a>
                         </div>
-                        <button type="button" class="footer__application footer__application--mob">Оставить заявку</button>
+                        <button type="button" class="footer__application footer__application--mob">Оставить
+                            заявку</button>
                     </div>
                 </div>
                 <div class="footer__row footer__row--third">
