--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -388,7 +388,7 @@
                             <a class="main-slider__link main-slider__link--pa" href="log-in.html">Личный кабинет</a>
                         </li>
                         <li>
-                            <a class="main-slider__link main-slider__link--search">Поиск</a>
+                            <a class="main-slider__link main-slider__link--search" href="search.html">Поиск</a>
                         </li>
                         <li>
                             <a class="main-slider__link main-slider__link--favorites"
