--- a/src/pages/thanks-for-order.html
+++ b/src/pages/thanks-for-order.html
@@ -298,21 +298,21 @@
                 <h1 class="section__title">Спасибо за заказ!</h1>
                 <ul class="thanks-for-order__list">
                     <li class="thanks-for-order__item">
-                        Ожидайте, наш менеджер позвонит Вам завтра <br>
-                        с 8:00 до 10:00 по московскому времени. <br>
-                        Если вы пропустили звонок, то просто <br>
-                        перезвоните нам по номеру 8 (800) 000-00-00 <br>
+                        Ожидайте, наш менеджер позвонит Вам завтра
+                        с 8:00 до 10:00 по московскому времени.
+                        Если вы пропустили звонок, то просто
+                        перезвоните нам по номеру 8 (800) 000-00-00
                         или ожидайте повторного звонка.
                     </li>
                     <li class="thanks-for-order__item">
-                        Изменения в статусе заказа мы будем <br>
-                        отправлять на ваш электронный адрес и по смс. <br>
-                        Так же за состоянием заказа вы можете следить из  <br>
+                        Изменения в статусе заказа мы будем
+                        отправлять на ваш электронный адрес и по смс.
+                        Так же за состоянием заказа вы можете следить из
                         своего личного кабинета (профиль - заказы).
                     </li>
                     <li class="thanks-for-order__item">
-                        Если у вас есть уточняющие вопросы <br>
-                        позвоните по номеру 8 (800) 000-00-00 <br>
+                        Если у вас есть уточняющие вопросы
+                        позвоните по номеру 8 (800) 000-00-00
                         или напишите нам на info@site.ru
                     </li>
                 </ul>
