--- a/src/pages/webinar.html
+++ b/src/pages/webinar.html
@@ -588,6 +588,14 @@
                         </div>
                     </li>
                 </ul>
+                <div class="main-reviews__btns">
+                    <button type="button" class="main-slider__btn main-slider__btn--prev">
+                        <span class="visually-hidden">Предыдущий слайд.</span>
+                    </button>
+                    <button type="button" class="main-slider__btn main-slider__btn--next">
+                        <span class="visually-hidden">Следующий слайд.</span>
+                    </button>
+                </div>
             </section>
 
             <!-- Программа вебинара -->
