Заканчивает планшетную верстку

--- a/src/pages/webinar.html
+++ b/src/pages/webinar.html
@@ -119,11 +119,11 @@
                     </button>
                     <a href="index.html" class="second-row__main-link">
                         <picture>
-                            <source src="./assets/img/main-logo.svg" alt="Логотип бьюти мед групп." class="main-link__logo"
-                            width="261" height="42" media="(min-width: 760px)">
+                            <source src="./assets/img/main-logo.svg" alt="Логотип бьюти мед групп."
+                                class="main-link__logo" width="261" height="42" media="(min-width: 760px)">
                             <img src="./assets/img/main-logo.svg" alt="Логотип бьюти мед групп." class="main-link__logo"
-                            width="149" height="24">
-                           </picture>
+                                width="149" height="24">
+                        </picture>
                     </a>
                     <div class="second-row__address">
                         Москва, ул. Прянишникова, д. 23А
@@ -295,7 +295,7 @@
             </div>
 
             <h1 class="section__title webinar__title">
-                Обучение от  ООО "БьютиМедГрупп"
+                Обучение от ООО "БьютиМедГрупп"
             </h1>
             <!-- Главная Информация о вебинаре -->
             <section class="webinar-main">
@@ -343,10 +343,10 @@
                 </div>
                 <div class="webinar-main__decorative">
                     <picture>
-                        <source srcset="./assets/img/webinar/webinar.webp" alt="Декоративное изображение." aria-hidden="true"
-                        width="437" height="616" media="(min-width: 744px)">
-                        <img src="./assets/img/webinar/webinar-mob.webp" alt="Декоративное изображение." aria-hidden="true"
-                        width="220" height="310">
+                        <source srcset="./assets/img/webinar/webinar.webp" alt="Декоративное изображение."
+                            aria-hidden="true" width="437" height="616" media="(min-width: 744px)">
+                        <img src="./assets/img/webinar/webinar-mob.webp" alt="Декоративное изображение."
+                            aria-hidden="true" width="220" height="310">
                     </picture>
                 </div>
             </section>
@@ -432,6 +432,14 @@
                         </div>
                     </li>
                 </ul>
+                <div class="main-reviews__btns">
+                    <button type="button" class="main-slider__btn main-slider__btn--prev">
+                        <span class="visually-hidden">Предыдущий слайд.</span>
+                    </button>
+                    <button type="button" class="main-slider__btn main-slider__btn--next">
+                        <span class="visually-hidden">Следующий слайд.</span>
+                    </button>
+                </div>
             </section>
 
             <!-- о вебинаре -->
@@ -482,10 +490,10 @@
                 <div class="webinar-autor__content">
                     <div class="webinar-autor__img webinar-main__decorative">
                         <picture>
-                            <source srcset="./assets/img/webinar/webinar.webp" alt="Декоративное изображение." aria-hidden="true"
-                            width="437" height="616" media="(min-width: 744px)">
-                            <img src="./assets/img/webinar/webinar-mob.webp" alt="Декоративное изображение." aria-hidden="true"
-                            width="220" height="310">
+                            <source srcset="./assets/img/webinar/webinar.webp" alt="Декоративное изображение."
+                                aria-hidden="true" width="437" height="616" media="(min-width: 744px)">
+                            <img src="./assets/img/webinar/webinar-mob.webp" alt="Декоративное изображение."
+                                aria-hidden="true" width="220" height="310">
                         </picture>
                     </div>
                     <div class="webinar-autor__info">
@@ -603,7 +611,8 @@
                 <h2 class="section__title--smaller section__title main-faq__title">Программа вебинара</h2>
                 <ul class="main-faq__list main-faq__list--webinar">
                     <li class="main-faq__item">
-                        <span class="main-faq__question main-faq__question--cases">МОДУЛЬ 1 - Название данного модуля</span>
+                        <span class="main-faq__question main-faq__question--cases">МОДУЛЬ 1 - Название данного
+                            модуля</span>
                         <button class="case-study footer__application">Разбор кейсов</button>
                         <span class="main-faq__answer">Text text text text text text text.</span>
                         <button type="button" class="main-faq__btn">
@@ -611,7 +620,9 @@
                         </button>
                     </li>
                     <li class="main-faq__item main-faq__item--active">
-                        <span class="main-faq__question main-faq__question--active main-faq__question--cases--active">Aenean euismod elementum nisi quis
+                        <span
+                            class="main-faq__question main-faq__question--active main-faq__question--cases--active">Aenean
+                            euismod elementum nisi quis
                             eleifend.</span>
                         <button class="case-study footer__application">Разбор кейсов</button>
                         <span class="main-faq__answer main-faq__answer--active">
@@ -648,7 +659,8 @@
                         </button>
                     </li>
                     <li class="main-faq__item">
-                        <span class="main-faq__question main-faq__question--cases">Gravida quis blandit turpis cursus in hac habitasse platea
+                        <span class="main-faq__question main-faq__question--cases">Gravida quis blandit turpis cursus in
+                            hac habitasse platea
                             dictumst.</span>
                         <button class="case-study footer__application">Разбор кейсов</button>
                         <span class="main-faq__answer">Text text text text text text text.</span>
@@ -665,7 +677,8 @@
                         </button>
                     </li>
                     <li class="main-faq__item">
-                        <span class="main-faq__question main-faq__question--cases">Dui sapien eget mi proin sed libero enim sed.</span>
+                        <span class="main-faq__question main-faq__question--cases">Dui sapien eget mi proin sed libero
+                            enim sed.</span>
                         <button class="case-study footer__application">Разбор кейсов</button>
                         <span class="main-faq__answer">Text text text text text text text.</span>
                         <button type="button" class="main-faq__btn">
@@ -724,6 +737,14 @@
                         </div>
                     </li>
                 </ul>
+                <div class="main-reviews__btns">
+                    <button type="button" class="main-slider__btn main-slider__btn--prev">
+                        <span class="visually-hidden">Предыдущий слайд.</span>
+                    </button>
+                    <button type="button" class="main-slider__btn main-slider__btn--next">
+                        <span class="visually-hidden">Следующий слайд.</span>
+                    </button>
+                </div>
             </section>
 
         </main>
@@ -1244,7 +1265,8 @@
                                 <span class="visually-hidden">Телеграм.</span>
                             </a>
                         </div>
-                        <button type="button" class="footer__application footer__application--mob">Оставить заявку</button>
+                        <button type="button" class="footer__application footer__application--mob">Оставить
+                            заявку</button>
                     </div>
                 </div>
                 <div class="footer__row footer__row--third">
