--- a/src/pages/personal-area.html
+++ b/src/pages/personal-area.html
@@ -324,7 +324,7 @@
                             </div>
                         </div>
                         <div class="pa-tabs__content">
-                            <div class="pa-tabs__content-item pa-tabs__content-item--active" id="personal-area">
+                            <div class="pa-tabs__content-item" id="personal-area">
                                 <div class="personal-area__pa">
                                     <div class="pa__left-column">
                                         <div class="pa__basket">
@@ -473,7 +473,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="pa-tabs__content-item" id="orders">
+                            <div class="pa-tabs__content-item pa-tabs__content-item--active" id="orders">
                                 <div class="personal-area__orders">
                                     <div class="orders">
                                         <ul class="delivery__list">
